# leptos-gh-pages-test

./: .gitignore  Cargo.toml
.github/workflows/: gh-pages.yml
core/: Cargo.toml
core/src/: lib.rs
web/: Cargo.toml  index.html
web/src/: main.rs
