[package]
name = "test-web"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
stylance = "0.5"

[package.metadata.stylance]
output_file = "public/index.css"
folders = ["./css/"]
extensions = [".module.scss", ".module.css"]
hash_len = 7